# django_elasticsearch_example

./: README.md  pyproject.toml
buildings/: admin.py  documents.py  models.py  urls.py  views.py
buildings/migrations/: 0001_initial.py  0002_remove_house_flor_house_floor_alter_house_roof.py
core/: settings.py  urls.py
